Change data directory from 'data/' to '_data/'
- Updated all config.yaml files to use '_data' directory
- Updated all viewer.html files to fetch from '_data/entities.json'
- Renamed example data directory from 'data' to '_data'
- Updated .gitignore to exclude '_data/' instead of 'data/'
- Ensures consistency across all templates and examples
- Underscore prefix helps distinguish from other directories

--- a/templates/generic/viewer.html
+++ b/templates/generic/viewer.html
@@ -53,7 +53,7 @@
     <script>
         // Same basic structure as research template
         // Customize colors and entity handling based on config
-        fetch('data/entities.json')
+        fetch('_data/entities.json')
             .then(response => response.json())
             .then(data => initGraph(data))
             .catch(error => {
